added Set spawn keybind

--- a/src/main/resources/assets/skypixel/lang/en_US.lang
+++ b/src/main/resources/assets/skypixel/lang/en_US.lang
@@ -30,6 +30,7 @@ skypixel.key_menu=Skyblock Menu
 skypixel.key_warp_home=Warp to your Island
 skypixel.key_warp_hub=Warp to Hub
 skypixel.key_warp_garden=Warp to Garden
+skypixel.key_set_spawn=Set Spawnpoint
 skypixel.numeral_type_arabic=Arabic
 skypixel.numeral_type_roman=Roman
 skypixel.position_bottom=Bottom
